<resources>
    <string name="app_name">MyApp</string>
    <string name="sign_up"> Đăng kí tài khoản tại đây</string>
    <string name="logn_in"> ĐĂNG NHẬP</string>
    <string name="forgot_password"> Quên mật khẩu ?</string>
    <string name="caption">TUNGSCHOOL </string>
    <string name="sign_in">"Ứng dụng TUNGSCHOOL</string>
    <string name="body_text">"      Ứng dụng hỗ trợ các phụ huynh kết nối,tìm
        kiếm gia sư cho con, nhanh chóng,chất..</string>
    <string name="title_activity_parent">ParentActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="txt_parent">Phụ Huynh</string>
    <string name="txt_teacher">Gia Sư</string>
    <string name="txt_text1">Con bạn chưa có khóa học nào</string>
    <string name="txt_text2">Bấm vào </string>
    <string name="txt_text3">Tìm gia sư </string>
    <string name="txt_text4">để đăng ký khóa học</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu1">MenuActivity1</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_menu">Menu</string>
</resources>
