<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--header-->
    <ImageView
        android:id="@+id/imageMrTung"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/tungschool"

        />

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageMrTung"
        android:layout_centerInParent="true"
        android:text="@string/caption"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:padding="7dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvSignUp"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="100dp"
        android:singleLine="true"
        android:text="Đăng ký "
        android:textColor="@color/colorPurple" />
    <!--body-->
    <LinearLayout
        android:id="@+id/llBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/et_username"
                style="@style/FloatEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                android:drawablePadding="5dp"
                android:paddingRight="35dp"
                android:hint="User Name"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    style="@style/FloatEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                    android:drawablePadding="5dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:paddingRight="35dp"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/tv_show_hide_password"
                style="@style/TransparentButton"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/ic_visibility_off_black_24dp" />
        </RelativeLayout>

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:paddingLeft="180dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPurple"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/RaiseButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/logn_in" />
    </LinearLayout>

    <!--foot-->
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/tvSignUp"
        android:text="tài khoản tại đây" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />
</RelativeLayout>